kube-manifests/frontend-deployment-restsimulator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-simulator
  labels:
    app.kubernetes.io/name: rest-simulator-app
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: restsimulator
      app.kubernetes.io/component: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: restsimulator
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: rest-simulator
        image: vijay4601/tomcat-restsimulator
        # image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
