kube-manifests/frontend-clusterIP-service-restsimulator.yml
apiVersion: v1
kind: Service
metadata:
  name: restsimulator-clusterip
  labels:
    app.kubernetes.io/name: restsimulator-svc-clusterip
    app.kubernetes.io/component: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: restsimulator
    app.kubernetes.io/component: frontend
